@@ -1,3 +1,7 @@
+2013-05-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* GSWeb/GSWMessage.[h|]
+	  get rid of bogus #ifndef NO_GNUSTEP
+
 2013-05-30: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* GSWeb/GSWElement.h
 	  @class not needed after including full header of that class
